2017-11-05  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/xml/manual/abi.xml: Move docs.oracle.com references to https.

2017-11-03  Jonathan Wakely  <jwakely@redhat.com>

	* include/std/type_traits (endian): Define new enumeration type.
	* testsuite/20_util/endian/1.cc: New test.

	* include/bits/node_handle.h (_Node_insert_return::get): Remove, as
	per P0508R0.

2017-11-01  François Dumont  <fdumont@gcc.gnu.org>

	* python/libstdcxx/v6/printers.py (StdExpAnyPrinter.__init__): Strip
	typename versioned namespace before the substitution.
	(StdExpOptionalPrinter.__init__): Likewise.
	(StdVariantPrinter.__init__): Likewise.
	(Printer.add_version): Inject versioned namespace after std or
	__gnu_cxx.
	(build_libstdcxx_dictionary): Adapt add_version usages, always pass
	namespace first and symbol second.

2017-11-01  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/82777
	* src/filesystem/std-path.cc (path::lexically_normal): Remove dot-dot
	elements correctly.
	* testsuite/27_io/filesystem/path/generation/normal.cc: Add testcase.
	* testsuite/util/testsuite_fs.h (compare_paths): Improve exception
	text.

2017-10-30  Jonathan Wakely  <jwakely@redhat.com>

	* include/Makefile.am (stamp-bits-sup): Do not create broken symlink
	to stamp-bits.
	* include/Makefile.in: Regenerate.

	* include/std/fstream (basic_ifstream, basic_ofstream, basic_fstream):
	Remove outdated comments about calling c_str() to create a file stream
	from a std::string.
	(basic_ofstream::basic_ofstream, basic_ofstream::open): Remove
	redundant ios_mode::trunc bits from default arguments and comments.

	* doc/xml/faq.xml: Adjust "What is libstdc++?" answer slightly.

	* include/bits/hashtable_policy.h: Include <tuple>.
	* include/std/unordered_map: Only include <bits/stl_pair.h> instead
	of <utility> and <tuple>.
	* include/std/unordered_set: Likewise.

2017-10-30  Ville Voutilainen  <ville.voutilainen@gmail.com>

	Implement LWG 2485
	* include/debug/array (get(const array<_Tp, _Nm>&&)): New.