@@ -481,37 +481,37 @@ void test_triviality()
     static_assert(MA_VAL == is_trivially_move_assignable_v<variant<A>>, ""); \
   }
   TEST_TEMPLATE(=default, =default, =default, =default, =default,  true,  true,  true,  true)
-  TEST_TEMPLATE(=default, =default, =default, =default,       {},  true,  true,  true, false)
-  TEST_TEMPLATE(=default, =default, =default,       {}, =default,  true,  true, false,  true)
-  TEST_TEMPLATE(=default, =default, =default,       {},       {},  true,  true, false, false)
-  TEST_TEMPLATE(=default, =default,       {}, =default, =default,  true, false,  true,  true)
-  TEST_TEMPLATE(=default, =default,       {}, =default,       {},  true, false,  true, false)
-  TEST_TEMPLATE(=default, =default,       {},       {}, =default,  true, false, false,  true)
-  TEST_TEMPLATE(=default, =default,       {},       {},       {},  true, false, false, false)
-  TEST_TEMPLATE(=default,       {}, =default, =default, =default, false,  true,  true,  true)
-  TEST_TEMPLATE(=default,       {}, =default, =default,       {}, false,  true,  true, false)
-  TEST_TEMPLATE(=default,       {}, =default,       {}, =default, false,  true, false,  true)
-  TEST_TEMPLATE(=default,       {}, =default,       {},       {}, false,  true, false, false)
-  TEST_TEMPLATE(=default,       {},       {}, =default, =default, false, false,  true,  true)
-  TEST_TEMPLATE(=default,       {},       {}, =default,       {}, false, false,  true, false)
-  TEST_TEMPLATE(=default,       {},       {},       {}, =default, false, false, false,  true)
-  TEST_TEMPLATE(=default,       {},       {},       {},       {}, false, false, false, false)
-  TEST_TEMPLATE(      {}, =default, =default, =default, =default, false, false, false, false)
-  TEST_TEMPLATE(      {}, =default, =default, =default,       {}, false, false, false, false)
-  TEST_TEMPLATE(      {}, =default, =default,       {}, =default, false, false, false, false)
-  TEST_TEMPLATE(      {}, =default, =default,       {},       {}, false, false, false, false)
-  TEST_TEMPLATE(      {}, =default,       {}, =default, =default, false, false, false, false)
-  TEST_TEMPLATE(      {}, =default,       {}, =default,       {}, false, false, false, false)
-  TEST_TEMPLATE(      {}, =default,       {},       {}, =default, false, false, false, false)
-  TEST_TEMPLATE(      {}, =default,       {},       {},       {}, false, false, false, false)
-  TEST_TEMPLATE(      {},       {}, =default, =default, =default, false, false, false, false)
-  TEST_TEMPLATE(      {},       {}, =default, =default,       {}, false, false, false, false)
-  TEST_TEMPLATE(      {},       {}, =default,       {}, =default, false, false, false, false)
-  TEST_TEMPLATE(      {},       {}, =default,       {},       {}, false, false, false, false)
-  TEST_TEMPLATE(      {},       {},       {}, =default, =default, false, false, false, false)
-  TEST_TEMPLATE(      {},       {},       {}, =default,       {}, false, false, false, false)
-  TEST_TEMPLATE(      {},       {},       {},       {}, =default, false, false, false, false)
-  TEST_TEMPLATE(      {},       {},       {},       {},       {}, false, false, false, false)
+  TEST_TEMPLATE(=default, =default, =default, =default,         ,  true,  true,  true, false)
+  TEST_TEMPLATE(=default, =default, =default,         , =default,  true,  true, false,  true)
+  TEST_TEMPLATE(=default, =default, =default,         ,         ,  true,  true, false, false)
+  TEST_TEMPLATE(=default, =default,         , =default, =default,  true, false,  true,  true)
+  TEST_TEMPLATE(=default, =default,         , =default,         ,  true, false,  true, false)
+  TEST_TEMPLATE(=default, =default,         ,         , =default,  true, false, false,  true)
+  TEST_TEMPLATE(=default, =default,         ,         ,         ,  true, false, false, false)
+  TEST_TEMPLATE(=default,         , =default, =default, =default, false,  true,  true,  true)
+  TEST_TEMPLATE(=default,         , =default, =default,         , false,  true,  true, false)
+  TEST_TEMPLATE(=default,         , =default,         , =default, false,  true, false,  true)
+  TEST_TEMPLATE(=default,         , =default,         ,         , false,  true, false, false)
+  TEST_TEMPLATE(=default,         ,         , =default, =default, false, false,  true,  true)
+  TEST_TEMPLATE(=default,         ,         , =default,         , false, false,  true, false)
+  TEST_TEMPLATE(=default,         ,         ,         , =default, false, false, false,  true)
+  TEST_TEMPLATE(=default,         ,         ,         ,         , false, false, false, false)
+  TEST_TEMPLATE(        , =default, =default, =default, =default, false, false, false, false)
+  TEST_TEMPLATE(        , =default, =default, =default,         , false, false, false, false)
+  TEST_TEMPLATE(        , =default, =default,         , =default, false, false, false, false)
+  TEST_TEMPLATE(        , =default, =default,         ,         , false, false, false, false)
+  TEST_TEMPLATE(        , =default,         , =default, =default, false, false, false, false)
+  TEST_TEMPLATE(        , =default,         , =default,         , false, false, false, false)
+  TEST_TEMPLATE(        , =default,         ,         , =default, false, false, false, false)
+  TEST_TEMPLATE(        , =default,         ,         ,         , false, false, false, false)
+  TEST_TEMPLATE(        ,         , =default, =default, =default, false, false, false, false)
+  TEST_TEMPLATE(        ,         , =default, =default,         , false, false, false, false)
+  TEST_TEMPLATE(        ,         , =default,         , =default, false, false, false, false)
+  TEST_TEMPLATE(        ,         , =default,         ,         , false, false, false, false)
+  TEST_TEMPLATE(        ,         ,         , =default, =default, false, false, false, false)
+  TEST_TEMPLATE(        ,         ,         , =default,         , false, false, false, false)
+  TEST_TEMPLATE(        ,         ,         ,         , =default, false, false, false, false)
+  TEST_TEMPLATE(        ,         ,         ,         ,         , false, false, false, false)
 #undef TEST_TEMPLATE
 
 #define TEST_TEMPLATE(CC, MC, CA, MA) \
@@ -529,21 +529,21 @@ void test_triviality()
     static_assert(!is_trivially_move_assignable_v<variant<AllDeleted, A>>, ""); \
   }
   TEST_TEMPLATE(=default, =default, =default, =default)
-  TEST_TEMPLATE(=default, =default, =default,       {})
-  TEST_TEMPLATE(=default, =default,       {}, =default)
-  TEST_TEMPLATE(=default, =default,       {},       {})
-  TEST_TEMPLATE(=default,       {}, =default, =default)
-  TEST_TEMPLATE(=default,       {}, =default,       {})
-  TEST_TEMPLATE(=default,       {},       {}, =default)
-  TEST_TEMPLATE(=default,       {},       {},       {})
-  TEST_TEMPLATE(      {}, =default, =default, =default)
-  TEST_TEMPLATE(      {}, =default, =default,       {})
-  TEST_TEMPLATE(      {}, =default,       {}, =default)
-  TEST_TEMPLATE(      {}, =default,       {},       {})
-  TEST_TEMPLATE(      {},       {}, =default, =default)
-  TEST_TEMPLATE(      {},       {}, =default,       {})
-  TEST_TEMPLATE(      {},       {},       {}, =default)
-  TEST_TEMPLATE(      {},       {},       {},       {})
+  TEST_TEMPLATE(=default, =default, =default,         )
+  TEST_TEMPLATE(=default, =default,         , =default)
+  TEST_TEMPLATE(=default, =default,         ,         )
+  TEST_TEMPLATE(=default,         , =default, =default)
+  TEST_TEMPLATE(=default,         , =default,         )
+  TEST_TEMPLATE(=default,         ,         , =default)
+  TEST_TEMPLATE(=default,         ,         ,         )
+  TEST_TEMPLATE(        , =default, =default, =default)
+  TEST_TEMPLATE(        , =default, =default,         )
+  TEST_TEMPLATE(        , =default,         , =default)
+  TEST_TEMPLATE(        , =default,         ,         )
+  TEST_TEMPLATE(        ,         , =default, =default)
+  TEST_TEMPLATE(        ,         , =default,         )
+  TEST_TEMPLATE(        ,         ,         , =default)
+  TEST_TEMPLATE(        ,         ,         ,         )
 #undef TEST_TEMPLATE
 
   static_assert(is_trivially_copy_constructible_v<variant<DefaultNoexcept, int, char, float, double>>, "");
